// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar Picker big 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-779310772 jsx-2165763448 avatar"
  >
    <label
      aria-label="Edit image"
      className="jsx-779310772 jsx-2165763448 avatar__container"
      htmlFor="avatar"
    >
      <input
        className="jsx-779310772 jsx-2165763448 file-input"
        id="avatar"
        name="name"
        onChange={[Function]}
        type="file"
      />
      <div
        className="jsx-779310772 jsx-2165763448 avatar__thumb"
        style={
          Object {
            "backgroundImage": "none",
          }
        }
      >
        <svg
          aria-label="camera"
          className="grommetux-control-icon grommetux-control-icon-camera grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M1,21 L1,7 L6,7 L8,3 L16,3 L18,7 L23,7 L23,21 L1,21 Z M12,18 C14.7614237,18 17,15.7614237 17,13 C17,10.2385763 14.7614237,8 12,8 C9.23857625,8 7,10.2385763 7,13 C7,15.7614237 9.23857625,18 12,18 Z"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Avatar Picker default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3385526183 jsx-2165763448 avatar"
  >
    <div
      className="jsx-3385526183 jsx-2165763448 avatar__button"
    />
    <label
      aria-label="Edit image"
      className="jsx-3385526183 jsx-2165763448 avatar__container"
      htmlFor="avatar"
    >
      <input
        className="jsx-3385526183 jsx-2165763448 file-input"
        id="avatar"
        name="name"
        onChange={[Function]}
        type="file"
      />
      <div
        className="jsx-3385526183 jsx-2165763448 avatar__thumb"
        style={
          Object {
            "backgroundImage": "none",
          }
        }
      >
        <svg
          aria-label="camera"
          className="grommetux-control-icon grommetux-control-icon-camera grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M1,21 L1,7 L6,7 L8,3 L16,3 L18,7 L23,7 L23,21 L1,21 Z M12,18 C14.7614237,18 17,15.7614237 17,13 C17,10.2385763 14.7614237,8 12,8 C9.23857625,8 7,10.2385763 7,13 C7,15.7614237 9.23857625,18 12,18 Z"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </div>
    </label>
    <div
      className="jsx-3385526183 jsx-2165763448 avatar__button"
    />
  </div>
</div>
`;

exports[`Storyshots Button default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className="jsx-1748154264 button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__content"
    >
      Hello!
    </span>
  </button>
</div>
`;

exports[`Storyshots Calendar default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3268505078 calendar"
  >
    <div
      className="jsx-3590812337"
    >
      <div
        className="jsx-3089003290 navigation"
      >
        <button
          className="jsx-3089003290 prev"
          onClick={[Function]}
        >
          <svg
            aria-label="previous"
            className="grommetux-control-icon grommetux-control-icon-previous grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          className="jsx-3089003290 navigation__month"
        >
          April
          <span
            className="jsx-3089003290"
          >
            ·
          </span>
          2018
        </div>
        <button
          className="jsx-3089003290 next"
          onClick={[Function]}
        >
          <svg
            aria-label="next"
            className="grommetux-control-icon grommetux-control-icon-next grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <ul
        className="jsx-3590812337 weekdays"
      >
        <li
          className="jsx-3590812337 weekdays__item"
        >
          Sun
        </li>
        <li
          className="jsx-3590812337 weekdays__item"
        >
          Mon
        </li>
        <li
          className="jsx-3590812337 weekdays__item"
        >
          Tue
        </li>
        <li
          className="jsx-3590812337 weekdays__item"
        >
          Wed
        </li>
        <li
          className="jsx-3590812337 weekdays__item"
        >
          Thu
        </li>
        <li
          className="jsx-3590812337 weekdays__item"
        >
          Fri
        </li>
        <li
          className="jsx-3590812337 weekdays__item"
        >
          Sat
        </li>
      </ul>
    </div>
    <ul
      className="jsx-3270423735 month"
    >
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-01"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            1
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-02"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            2
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-03"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            3
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-04"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            4
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-05"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            5
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-06"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            6
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-07"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            7
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-08"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            8
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-09"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            9
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-10"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            10
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-11"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            11
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-12"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            12
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-13"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            13
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-14"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            14
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-15"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            15
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-16"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            16
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-17"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            17
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-18"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            18
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-19"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            19
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-20"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            20
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-21"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            21
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--disabled day--date--2018-04-22"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            22
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--selected--without-events day--date--2018-04-23"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            23
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-04-24"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            24
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-04-25"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            25
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-04-26"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            26
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-04-27"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            27
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-04-28"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            28
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-04-29"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            29
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-04-30"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            30
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-05-01"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            1
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-05-02"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            2
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-05-03"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            3
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-05-04"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            4
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-1990659263 day day--date--2018-05-05"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-1990659263 day__border"
          >
            5
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Card Picker default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1526560949 card-picker"
  >
    <label
      className="jsx-1526560949 card card--active"
      htmlFor="male"
    >
      <input
        checked={true}
        className="jsx-1526560949"
        id="male"
        name="male"
        onChange={[Function]}
        type="radio"
        value="male"
      />
      <img
        alt="Male"
        className="jsx-1526560949"
        src="http://via.placeholder.com/240x240"
      />
      <p
        className="jsx-1526560949 content"
      >
        Male
      </p>
    </label>
    <label
      className="jsx-1526560949 card"
      htmlFor="any"
    >
      <input
        checked={false}
        className="jsx-1526560949"
        id="any"
        name="any"
        onChange={[Function]}
        type="radio"
        value="any"
      />
      <img
        alt="Any"
        className="jsx-1526560949"
        src="http://via.placeholder.com/240x240"
      />
      <p
        className="jsx-1526560949 content"
      >
        Any
      </p>
    </label>
    <label
      className="jsx-1526560949 card"
      htmlFor="female"
    >
      <input
        checked={false}
        className="jsx-1526560949"
        id="female"
        name="female"
        onChange={[Function]}
        type="radio"
        value="female"
      />
      <img
        alt="Female"
        className="jsx-1526560949"
        src="http://via.placeholder.com/240x240"
      />
      <p
        className="jsx-1526560949 content"
      >
        Female
      </p>
    </label>
  </div>
</div>
`;

exports[`Storyshots Card default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3439448312 card"
    style={
      Object {
        "padding": "50px",
        "width": "200px",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos libero deserunt soluta.
  </div>
</div>
`;

exports[`Storyshots Date Picker defauld 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <form>
    <div
      className="form-field"
    >
      <label
        htmlFor="datepicker"
      >
        Date Picker
      </label>
      <div>
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="datepicker"
              disabled={false}
              id="datepicker"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              tabIndex={undefined}
              title={undefined}
              type="text"
              value="23 Apr, 2018"
            />
          </div>
        </div>
      </div>
      
      <style>
        .form-field{position:relative;}
      </style>
      <style>
        .form-field .calendar{background-color:#ffffff;border:none;border-radius:6px;box-shadow:0 2px 40px 0 rgba(0,0,0,0.05);}
        .form-field .calendar .react-datepicker__header{border:none;background-color:#ffffff;}
        .form-field .calendar .react-datepicker__month{margin-top:0;}
        .form-field .calendar .react-datepicker__month-container{padding:10px 20px 20px 20px;}
        .form-field .calendar .react-datepicker__current-month{font-size:1rem;margin-bottom:20px;}
        .form-field .calendar .react-datepicker__triangle{position:absolute;top:0 !important;left:36px !important;width:0;height:0;margin:0 !important;-webkit-transform-origin:0 0;-ms-transform-origin:0 0;transform-origin:0 0;-webkit-transform:rotate(135deg);-ms-transform:rotate(135deg);transform:rotate(135deg);box-sizing:border-box !important;box-shadow:-4px 4px 14px 0 rgba(0,0,0,0.05) !important;border-width:6px !important;border-style:solid !important;border-color:transparent transparent #ffffff #ffffff !important;}
        .form-field .calendar .react-datepicker__triangle:before{content:none !important;}
        .form-field .calendar .react-datepicker__navigation{border:none;top:17px;}
        .form-field .calendar .react-datepicker__navigation:before{content:'';display:block;width:24px;height:24px;position:absolute;left:-39px;color:#222328;background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' viewBox='0 0 24 24' width='24px' height='24px' role='img' class='grommetux-control-icon grommetux-control-icon-form-next grommetux-control-icon--responsive' aria-label='form-next'%3E%3Cpolyline fill='none' stroke='%23000' stroke-width='2' points='9 6 15 12 9 18'%3E%3C/polyline%3E%3C/svg%3E");background-repeat:no-repeat;font-weight:bold;font-size:1.3rem;}
        .form-field .calendar .react-datepicker__navigation--next{right:16px;}
        .form-field .calendar .react-datepicker__navigation--previous{left:16px;}
        .form-field .calendar .react-datepicker__navigation--previous:before{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);left:18px;}
        .form-field .calendar .react-datepicker__day{margin:6px;border-radius:50%;width:24px;height:24px;line-height:24px;color:#2A2A30;font-size:0.75rem;font-weight:400;}
        .form-field .calendar .react-datepicker__day:hover:not(.react-datepicker__day--selected){color:#2A2A30;background-color:#eff0f4;}
        .form-field .calendar .react-datepicker__day--selected{color:#ffffff;background-color:#0c97f9;}
        .form-field .calendar .react-datepicker__day--outside-month{color:#bbbccd;}
        .form-field .calendar .react-datepicker__day-name{margin:0 6px;color:#bbbccd;width:24px;height:24px;line-height:24px;text-transform:uppercase;font-size:0.75rem;font-weight:400;}
      </style>
      <style>
        .form-field .datepicker{width:100%;padding:12px 16px 12px 52px;color:#2A2A30;font-size:0.875rem;box-sizing:border-box;background-color:#ffffff;background-repeat:no-repeat;background-position:17px center;background-image:url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='19px' height='20px' viewBox='0 0 19 20' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 48 %2847235%29 - http://www.bohemiancoding.com/sketch --%3E%3Ctitle%3Ecalendar%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cdefs%3E%3Cpath d='M4,4 C3.44771525,4 3,4.44771525 3,5 L3,17 C3,17.5522847 3.44771525,18 4,18 L17,18 C17.5522847,18 18,17.5522847 18,17 L18,5 C18,4.44771525 17.5522847,4 17,4 L4,4 Z M4,2 L17,2 C18.6568542,2 20,3.34314575 20,5 L20,17 C20,18.6568542 18.6568542,20 17,20 L4,20 C2.34314575,20 1,18.6568542 1,17 L1,5 C1,3.34314575 2.34314575,2 4,2 Z M3,7 L18,7 L18,9 L3,9 L3,7 Z M6,0.5 L6,0.5 C6.55228475,0.5 7,0.94771525 7,1.5 L7,5 C7,5.55228475 6.55228475,6 6,6 L6,6 C5.44771525,6 5,5.55228475 5,5 L5,1.5 C5,0.94771525 5.44771525,0.5 6,0.5 Z M15,0.5 L15,0.5 C15.5522847,0.5 16,0.94771525 16,1.5 L16,5 C16,5.55228475 15.5522847,6 15,6 L15,6 C14.4477153,6 14,5.55228475 14,5 L14,1.5 C14,0.94771525 14.4477153,0.5 15,0.5 Z M15.25,13 C15.9403559,13 16.5,12.4403559 16.5,11.75 C16.5,11.0596441 15.9403559,10.5 15.25,10.5 C14.5596441,10.5 14,11.0596441 14,11.75 C14,12.4403559 14.5596441,13 15.25,13 Z M15.25,16.8000002 C15.9403559,16.8000002 16.5,16.2403561 16.5,15.5500002 C16.5,14.8596443 15.9403559,14.3000002 15.25,14.3000002 C14.5596441,14.3000002 14,14.8596443 14,15.5500002 C14,16.2403561 14.5596441,16.8000002 15.25,16.8000002 Z M10.5500002,13 C11.2403561,13 11.8000002,12.4403559 11.8000002,11.75 C11.8000002,11.0596441 11.2403561,10.5 10.5500002,10.5 C9.85964425,10.5 9.30000019,11.0596441 9.30000019,11.75 C9.30000019,12.4403559 9.85964425,13 10.5500002,13 Z M10.5500002,16.8000002 C11.2403561,16.8000002 11.8000002,16.2403561 11.8000002,15.5500002 C11.8000002,14.8596443 11.2403561,14.3000002 10.5500002,14.3000002 C9.85964425,14.3000002 9.30000019,14.8596443 9.30000019,15.5500002 C9.30000019,16.2403561 9.85964425,16.8000002 10.5500002,16.8000002 Z M5.75,13 C6.44035594,13 7,12.4403559 7,11.75 C7,11.0596441 6.44035594,10.5 5.75,10.5 C5.05964406,10.5 4.5,11.0596441 4.5,11.75 C4.5,12.4403559 5.05964406,13 5.75,13 Z M5.75,16.8000002 C6.44035594,16.8000002 7,16.2403561 7,15.5500002 C7,14.8596443 6.44035594,14.3000002 5.75,14.3000002 C5.05964406,14.3000002 4.5,14.8596443 4.5,15.5500002 C4.5,16.2403561 5.05964406,16.8000002 5.75,16.8000002 Z' id='path-1'%3E%3C/path%3E%3C/defs%3E%3Cg id='Icons/Calendar' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' transform='translate%28-1.000000, 0.000000%29'%3E%3Cg id='icon'%3E%3Cmask id='mask-2' fill='white'%3E%3Cuse xlink:href='%23path-1'%3E%3C/use%3E%3C/mask%3E%3Cuse id='calendar' fill='%23cccccc' fill-rule='nonzero' xlink:href='%23path-1'%3E%3C/use%3E%3C/g%3E%3C/g%3E%3C/svg%3E");border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
        .form-field .datepicker:focus{outline:none;border-color:#0c97f9;}
        .form-field.has-error .datepicker,.form-field.has-error .datepicker:focus{border-color:#FF5572;}
      </style>
      <style>
        .form-field label{color:#2A2A30;display:block;margin-bottom:6px;font-weight:500;font-size:1rem;}
      </style>
      <style>
        .form-field .react-datepicker-wrapper,.form-field .react-datepicker__input-container{width:100%;}
      </style>
      <style>
        .form-field .input-error{position:absolute;left:4px;width:auto;max-width:100%;box-sizing:border-box;word-wrap:break-word;padding:12px 16px;margin-top:-6px;border-radius:3px;background-color:#ffffff;box-shadow:0 2px 14px 0 rgba(0,0,0,0.14);color:#FF5572;font-size:0.875rem;font-weight:500;}
        .form-field .input-error:before{content:'';position:absolute;top:0;left:32px;width:0;height:0;-webkit-transform-origin:0 0;-ms-transform-origin:0 0;transform-origin:0 0;-webkit-transform:rotate(135deg);-ms-transform:rotate(135deg);transform:rotate(135deg);box-sizing:border-box;box-shadow:-4px 4px 14px 0 rgba(0,0,0,0.05);border-width:6px;border-style:solid;border-color:transparent transparent #ffffff #ffffff;}
      </style>
    </div>
  </form>
</div>
`;

exports[`Storyshots File Input default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <input
    className="jsx-1181367161 inputFile"
    id="text-input"
    name="name"
    onChange={[Function]}
    type="file"
  />
  <label
    className="jsx-1181367161 upload-license-copy"
    htmlFor="text-input"
  >
    <svg
      className="jsx-1181367161 icon-upload"
      fill="#4695ef"
      height="17"
      viewBox="0 0 20 17"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="jsx-1181367161"
        d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"
      />
    </svg>
    <span
      className="jsx-1181367161"
    >
      Upload license
    </span>
  </label>
</div>
`;

exports[`Storyshots FileViewer simple PDF viewer 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#666666",
      "height": "500px",
      "padding": "24px",
    }
  }
>
  <div
    className="react-pdf__Document"
  >
    <div
      className="react-pdf__message react-pdf__message--loading"
    >
      Loading PDF…
    </div>
  </div>
</div>
`;

exports[`Storyshots FileViewer simple img viewer 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#666666",
      "height": "500px",
      "padding": "24px",
    }
  }
>
  <img
    alt="This document can't be displayed"
    className="jsx-2199625982 image"
    src={undefined}
  />
</div>
`;

exports[`Storyshots Form Fields Autocomplete 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1685083184 jsx-4038665278 jsx-2881818901 form-field"
  >
    <label
      className="jsx-1685083184 jsx-4038665278 jsx-2881818901"
      htmlFor="autocomplete"
    >
      Label
    </label>
    <div
      className="jsx-1685083184 jsx-4038665278 jsx-2881818901 autocomplete"
      onFocus={[Function]}
      role="textbox"
      tabIndex={0}
    >
      <div
        className="jsx-1685083184 jsx-4038665278 jsx-2881818901 autocomplete__input"
      >
        <input
          className="jsx-1685083184 jsx-4038665278 jsx-2881818901"
          id="autocomplete"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Start typing"
          type="text"
          value=""
        />
      </div>
    </div>
    <style>
      .autocomplete{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;position:relative;padding:5px;width:100%;min-width:100%;max-width:100%;min-height:48px;background-color:#ffffff;box-sizing:border-box;border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
      .autocomplete.focused,.autocomplete:focus{outline:none;border-color:#0c97f9;}
      .autocomplete.invalid,.autocomplete.invalid:focus{border-color:#FF5572;}
      .autocomplete__input{position:relative;margin:5px 11px;}
      .autocomplete__input input{line-height:24px;background:transparent;border:none;border-radius:inherit;font-style:normal;font-weight:normal;font-size:0.875rem;}
      .autocomplete__input input::-webkit-input-placeholder{color:#828393;}
      .autocomplete__input input::-moz-placeholder{color:#828393;}
      .autocomplete__input input:-ms-input-placeholder{color:#828393;}
      .autocomplete__input input:-moz-placeholder{color:#828393;}
      .autocomplete__input input:focus{outline:none;}
    </style>
  </div>
</div>
`;

exports[`Storyshots Form Fields Input 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1685083184 jsx-4038665278 jsx-2881818901 form-field"
  >
    <label
      className="jsx-1685083184 jsx-4038665278 jsx-2881818901"
      htmlFor="input"
    >
      Label
    </label>
    <input
      className=""
      id="input"
      name="Name"
      placeholder="Start typing"
      type={undefined}
      value={undefined}
    />
    <style>
      input,textarea,select{width:100%;min-width:100%;max-width:100%;min-height:44px;padding:12px 16px;background-color:#ffffff;color:#2A2A30;box-sizing:border-box;-webkit-appearance:none;font-style:normal;font-weight:normal;font-size:0.875rem;border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
      input::-webkit-input-placeholder,textarea::-webkit-input-placeholder,select::-webkit-input-placeholder{color:#828393;}
      input::-moz-placeholder,textarea::-moz-placeholder,select::-moz-placeholder{color:#828393;}
      input:-ms-input-placeholder,textarea:-ms-input-placeholder,select:-ms-input-placeholder{color:#828393;}
      input:-moz-placeholder,textarea:-moz-placeholder,select:-moz-placeholder{color:#828393;}
      input:focus,textarea:focus,select:focus{outline:none;padding:12px 16px;border-color:#0c97f9;}
      input.invalid,input.invalid:focus,textarea.invalid,textarea.invalid:focus,select.invalid,select.invalid:focus{border-color:#FF5572;}
    </style>
  </div>
</div>
`;

exports[`Storyshots Form Fields RadioButtonGroup 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324 form-field"
  >
    <fieldset
      className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324"
    >
      <legend
        className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324"
      >
        Label
      </legend>
      <label
        className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324 radio-button radio-button--active"
      >
        male
        <input
          className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324 "
          defaultChecked={true}
          name="Gender"
          type="radio"
          value="male"
        />
      </label>
      <label
        className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324 radio-button"
      >
        any
        <input
          className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324 "
          defaultChecked={false}
          name="Gender"
          type="radio"
          value="any"
        />
      </label>
      <label
        className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324 radio-button"
      >
        female
        <input
          className="jsx-1685083184 jsx-4038665278 jsx-2881818901 jsx-904933394 jsx-1324491324 "
          defaultChecked={false}
          name="Gender"
          type="radio"
          value="female"
        />
      </label>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Form Fields Select 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1685083184 jsx-4038665278 jsx-2881818901 form-field"
  >
    <label
      className="jsx-1685083184 jsx-4038665278 jsx-2881818901"
      htmlFor={undefined}
    >
      Label
    </label>
    <div
      className="jsx-792907225 select-container"
    >
      <select
        className="jsx-792907225 "
        id={undefined}
        name="Name"
        placeholder={undefined}
        type={undefined}
        value={undefined}
      >
        <option
          className="jsx-792907225"
          value="one"
        >
          one
        </option>
        <option
          className="jsx-792907225"
          value="two"
        >
          two
        </option>
        <option
          className="jsx-792907225"
          value="three"
        >
          three
        </option>
        <option
          className="jsx-792907225"
          value="four"
        >
          four
        </option>
      </select>
      <svg
        aria-label="down"
        className="grommetux-control-icon grommetux-control-icon-down grommetux-control-icon--responsive"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="7.086 3.174 17.086 13.174 7.086 23.174"
          stroke="#000"
          strokeWidth="2"
          transform="scale(1 -1) rotate(-89 -1.32 0)"
        />
      </svg>
    </div>
    <style>
      input,textarea,select{width:100%;min-width:100%;max-width:100%;min-height:44px;padding:12px 16px;background-color:#ffffff;color:#2A2A30;box-sizing:border-box;-webkit-appearance:none;font-style:normal;font-weight:normal;font-size:0.875rem;border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
      input::-webkit-input-placeholder,textarea::-webkit-input-placeholder,select::-webkit-input-placeholder{color:#828393;}
      input::-moz-placeholder,textarea::-moz-placeholder,select::-moz-placeholder{color:#828393;}
      input:-ms-input-placeholder,textarea:-ms-input-placeholder,select:-ms-input-placeholder{color:#828393;}
      input:-moz-placeholder,textarea:-moz-placeholder,select:-moz-placeholder{color:#828393;}
      input:focus,textarea:focus,select:focus{outline:none;padding:12px 16px;border-color:#0c97f9;}
      input.invalid,input.invalid:focus,textarea.invalid,textarea.invalid:focus,select.invalid,select.invalid:focus{border-color:#FF5572;}
    </style>
  </div>
</div>
`;

exports[`Storyshots Form Fields TextArea 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1685083184 jsx-4038665278 jsx-2881818901 form-field"
  >
    <label
      className="jsx-1685083184 jsx-4038665278 jsx-2881818901"
      htmlFor="textarea"
    >
      Label
    </label>
    <textarea
      className=""
      id="textarea"
      name="Name"
      placeholder="Start typing"
      value={undefined}
    />
    <style>
      input,textarea,select{width:100%;min-width:100%;max-width:100%;min-height:44px;padding:12px 16px;background-color:#ffffff;color:#2A2A30;box-sizing:border-box;-webkit-appearance:none;font-style:normal;font-weight:normal;font-size:0.875rem;border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
      input::-webkit-input-placeholder,textarea::-webkit-input-placeholder,select::-webkit-input-placeholder{color:#828393;}
      input::-moz-placeholder,textarea::-moz-placeholder,select::-moz-placeholder{color:#828393;}
      input:-ms-input-placeholder,textarea:-ms-input-placeholder,select:-ms-input-placeholder{color:#828393;}
      input:-moz-placeholder,textarea:-moz-placeholder,select:-moz-placeholder{color:#828393;}
      input:focus,textarea:focus,select:focus{outline:none;padding:12px 16px;border-color:#0c97f9;}
      input.invalid,input.invalid:focus,textarea.invalid,textarea.invalid:focus,select.invalid,select.invalid:focus{border-color:#FF5572;}
    </style>
  </div>
</div>
`;

exports[`Storyshots Modal default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className="jsx-1748154264 button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__content"
    >
      Open modal
    </span>
  </button>
</div>
`;

exports[`Storyshots Navigation default 1`] = `
<main
  style={
    Object {
      "display": "flex",
      "minHeight": "100vh",
    }
  }
>
  <nav
    className="jsx-970676680 nav"
  >
    <ul
      className="jsx-970676680 nav__list"
    >
      <li>
        <a
          aria-current={false}
          className="nav-item"
          href="/dashboard"
          onClick={[Function]}
          style={undefined}
        >
          <svg
            aria-label="dashboard"
            className="grommetux-control-icon grommetux-control-icon-dashboard nav-item__icon grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M15,16 C15,14.3431458 13.6568542,13 12,13 C10.3431458,13 9,14.3431458 9,16 M5,5 L7,7 M12,7 L12,13 M12,3 L12,5 M19,12 L21,12 M3,12 L5,12 M17,7 L19,5 M3,17 L21,17"
              fill="none"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
          <span
            className="nav-item__label"
          >
            Dashboards
          </span>
        </a>
        <style>
          .nav-item{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:53px;height:53px;padding:16px;color:#ffffff;-webkit-text-decoration:none;text-decoration:none;-webkit-letter-spacing:0.15rem;-moz-letter-spacing:0.15rem;-ms-letter-spacing:0.15rem;letter-spacing:0.15rem;text-transform:uppercase;border-radius:50%;box-sizing:border-box;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;font-size:0.75rem;font-weight:bold;}
          .nav-item--active{background-color:#0c97f9;}
          .nav-item__icon{width:21px;height:21px;fill:#ffffff !important;stroke:#ffffff !important;}
          .nav-item__icon circle,.nav-item__icon path{stroke:#ffffff !important;}
          .nav-item__label{display:none;}
          @media (min-width:960px){.nav-item{width:100%;padding:16px 16px 16px 50px;border-top-left-radius:0;border-bottom-left-radius:0;border-top-right-radius:30px;border-bottom-right-radius:30px;}.nav-item__icon{margin-right:30px;}.nav-item__label{display:inline-block;}}
        </style>
      </li>
      <li>
        <a
          aria-current={false}
          className="nav-item"
          href="/notifications"
          onClick={[Function]}
          style={undefined}
        >
          <svg
            aria-label="notification"
            className="grommetux-control-icon grommetux-control-icon-notification nav-item__icon grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M4,19 L4,9 C4,4.582 7.582,1 12,1 C16.418,1 20,4.582 20,9 L20,19 M1,19 L23,19 M15,19 L15,20 C15,21.657 13.657,23 12,23 C10.343,23 9,21.657 9,20 L9,19"
              fill="none"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
          <span
            className="nav-item__label"
          >
            Notifications
          </span>
        </a>
        <style>
          .nav-item{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:53px;height:53px;padding:16px;color:#ffffff;-webkit-text-decoration:none;text-decoration:none;-webkit-letter-spacing:0.15rem;-moz-letter-spacing:0.15rem;-ms-letter-spacing:0.15rem;letter-spacing:0.15rem;text-transform:uppercase;border-radius:50%;box-sizing:border-box;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;font-size:0.75rem;font-weight:bold;}
          .nav-item--active{background-color:#0c97f9;}
          .nav-item__icon{width:21px;height:21px;fill:#ffffff !important;stroke:#ffffff !important;}
          .nav-item__icon circle,.nav-item__icon path{stroke:#ffffff !important;}
          .nav-item__label{display:none;}
          @media (min-width:960px){.nav-item{width:100%;padding:16px 16px 16px 50px;border-top-left-radius:0;border-bottom-left-radius:0;border-top-right-radius:30px;border-bottom-right-radius:30px;}.nav-item__icon{margin-right:30px;}.nav-item__label{display:inline-block;}}
        </style>
      </li>
    </ul>
  </nav>
</main>
`;

exports[`Storyshots Notification default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3439448312 card notification-card"
    style={Object {}}
  >
    <div
      className="jsx-3375289435 jsx-1245880828 notification__time"
    >
      12:00 AM, Jun 20
    </div>
    <div
      className="jsx-3375289435 jsx-1245880828 notification__message"
    >
      <span
        className="jsx-3375289435 jsx-1245880828 notification__dot"
      />
      New message
    </div>
    <div
      className="jsx-3375289435 jsx-1245880828 notification__actions"
    >
      <button
        className="jsx-1748154264 button button--s button--flat button--rounded"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-label="checkmark"
          className="grommetux-control-icon grommetux-control-icon-checkmark grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="2 14 9 20 22 4"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </button>
      <button
        className="jsx-1748154264 button button--s button--flat button--rounded"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-label="trash"
          className="grommetux-control-icon grommetux-control-icon-trash grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M4,5 L20,5 L20,23 L4,23 L4,5 Z M1,5 L23,5 M9,1 L15,1 L15,5 L9,5 L9,1 Z M9,1 L15,1 L15,5 L9,5 L9,1 Z M15,9 L15,19 M9,9 L9,19"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="jsx-3439448312 card notification-card"
    style={Object {}}
  >
    <div
      className="jsx-3375289435 jsx-1245880828 notification__time"
    >
      12:00 AM, Jun 20
    </div>
    <div
      className="jsx-3375289435 jsx-1245880828 notification__message"
    >
      <span
        className="jsx-3375289435 jsx-1245880828 notification__dot"
      />
      New message
    </div>
    <div
      className="jsx-3375289435 jsx-1245880828 notification__actions"
    >
      <button
        className="jsx-1748154264 button button--s button--flat button--rounded"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-label="checkmark"
          className="grommetux-control-icon grommetux-control-icon-checkmark grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="2 14 9 20 22 4"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </button>
      <button
        className="jsx-1748154264 button button--s button--flat button--rounded"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-label="trash"
          className="grommetux-control-icon grommetux-control-icon-trash grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M4,5 L20,5 L20,23 L4,23 L4,5 Z M1,5 L23,5 M9,1 L15,1 L15,5 L9,5 L9,1 Z M9,1 L15,1 L15,5 L9,5 L9,1 Z M15,9 L15,19 M9,9 L9,19"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Paginator default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <ul
    className="pagination"
  >
    <li
      className="previous disabled"
    >
      <a
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <svg
          aria-label="form-previous-link"
          className="grommetux-control-icon grommetux-control-icon-form-previous-link grommetux-control-icon--small grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6,12.4 L18,12.4 M12.6,7 L18,12.4 L12.6,17.8"
            fill="none"
            stroke="#000"
            strokeWidth="2"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-current="page"
        aria-label="Page 1 is your current page"
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li
      className={undefined}
    >
      <a
        aria-current={null}
        aria-label="Page 2"
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li
      className={undefined}
    >
      <a
        aria-current={null}
        aria-label="Page 3"
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        3
      </a>
    </li>
    <li
      className={undefined}
    >
      <a
        aria-current={null}
        aria-label="Page 4"
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        4
      </a>
    </li>
    <li
      className={undefined}
    >
      <a
        aria-current={null}
        aria-label="Page 5"
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        5
      </a>
    </li>
    <li
      className="break"
    >
      ...
    </li>
    <li
      className={undefined}
    >
      <a
        aria-current={null}
        aria-label="Page 9"
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        9
      </a>
    </li>
    <li
      className={undefined}
    >
      <a
        aria-current={null}
        aria-label="Page 10"
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        10
      </a>
    </li>
    <li
      className="next"
    >
      <a
        className={undefined}
        href={undefined}
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <svg
          aria-label="form-next-link"
          className="grommetux-control-icon grommetux-control-icon-form-next-link grommetux-control-icon--small grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6,12.4 L18,12.4 M12.6,7 L18,12.4 L12.6,17.8"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </a>
    </li>
  </ul>
  <style>
    .pagination{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;width:672px;margin:0;padding:0;list-style:none;}
    .pagination li{padding:0;margin:3px;background-color:transparent;color:#BBBCCD;border-radius:50%;box-sizing:border-box;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;font-size:0.875rem;}
    .pagination li:hover:not(.break){background-color:#eff0f4;}
    .pagination li.break{cursor:initial;}
    .pagination li.active,.pagination li.active:hover{background-color:#0c97f9;color:#fff;cursor:initial;}
    .pagination li.previous,.pagination li.next{background-color:#eff0f4;}
    .pagination li.previous{margin-right:30px;}
    .pagination li.next{margin-left:30px;}
    .pagination li svg{fill:#BBBCCD;stroke:#BBBCCD;}
    .pagination a{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;height:30px;width:30px;}
  </style>
</div>
`;

exports[`Storyshots RadioButtons default 1`] = `
<div
  style={
    Object {
      "maxWidth": "443px",
      "padding": "24px",
    }
  }
>
  <fieldset>
    <div
      className="radio__wrapper"
    >
      <div
        className="radio__box"
      >
        <div
          className="radio__icon"
        >
          <svg
            aria-label="tools"
            className="grommetux-control-icon grommetux-control-icon-tools grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M11,2 L22,13 L17.5,17.5 L6.5,6.5 L11,2 Z M16,6 L17,5 L19,7 L18,8 M13,13 L4,22 L2,20 L11,11 M5,18 L6,19"
              fill="none"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </div>
        <input
          className="radio__select"
          defaultChecked={false}
          name="group"
          onChange={[Function]}
          type="radio"
          value="Medical record"
        />
        Medical record
      </div>
      <div
        className="radio__box"
      >
        <div
          className="radio__icon"
        >
          <svg
            aria-label="tools"
            className="grommetux-control-icon grommetux-control-icon-tools grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M11,2 L22,13 L17.5,17.5 L6.5,6.5 L11,2 Z M16,6 L17,5 L19,7 L18,8 M13,13 L4,22 L2,20 L11,11 M5,18 L6,19"
              fill="none"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </div>
        <input
          className="radio__select"
          defaultChecked={false}
          name="group"
          onChange={[Function]}
          type="radio"
          value="Prescription"
        />
        Prescription
      </div>
      <div
        className="radio__box"
      >
        <div
          className="radio__icon"
        >
          <svg
            aria-label="tools"
            className="grommetux-control-icon grommetux-control-icon-tools grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M11,2 L22,13 L17.5,17.5 L6.5,6.5 L11,2 Z M16,6 L17,5 L19,7 L18,8 M13,13 L4,22 L2,20 L11,11 M5,18 L6,19"
              fill="none"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </div>
        <input
          className="radio__select"
          defaultChecked={false}
          name="group"
          onChange={[Function]}
          type="radio"
          value="Lab analysis"
        />
        Lab analysis
      </div>
      <div
        className="radio__box"
      >
        <div
          className="radio__icon"
        >
          <svg
            aria-label="tools"
            className="grommetux-control-icon grommetux-control-icon-tools grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M11,2 L22,13 L17.5,17.5 L6.5,6.5 L11,2 Z M16,6 L17,5 L19,7 L18,8 M13,13 L4,22 L2,20 L11,11 M5,18 L6,19"
              fill="none"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </div>
        <input
          className="radio__select"
          defaultChecked={false}
          name="group"
          onChange={[Function]}
          type="radio"
          value="Sick list"
        />
        Sick list
      </div>
    </div>
    <style>
      fieldset{border:none;}
      .radio__wrapper{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;}
      .radio__select{opacity:0;width:100%;height:46px;position:absolute;left:0px;}
      .radio__icon{margin-right:18px;}
      .radio__icon svg path{stroke:#b8b9cc !important;}
      .radio__icon_active svg path{stroke:white !important;}
      .radio__box{box-shadow:0px 0px 10px 0px rgba(0,0,0,0.12);border-radius:6px;color:#b8b9cc;font-size:0.8rem;text-transform:uppercase;padding:13px 16px 13px 23px;margin-bottom:20px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-flex-basis:39%;-ms-flex-preferred-size:39%;flex-basis:39%;cursor:pointer;position:relative;}
      .radio__box input[type='radio']{cursor:pointer;}
      .radio__box_active{background-color:#1f93f4;color:white;}
      .radio__column{-webkit-flex-basis:47%;-ms-flex-preferred-size:47%;flex-basis:47%;}
    </style>
  </fieldset>
</div>
`;

exports[`Storyshots StarPicker simple start picker 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="jsx-1428835773 star"
    htmlFor="1-star1"
  >
    <input
      checked={false}
      className="jsx-1428835773"
      id="1-star1"
      name={1}
      onChange={[Function]}
      onClick={[Function]}
      type="radio"
      value={1}
    />
    <svg
      aria-label="star"
      className="grommetux-control-icon grommetux-control-icon-star grommetux-control-icon--large grommetux-control-icon--responsive"
      height="24px"
      role="img"
      theme={
        Object {
          "icon": Object {
            "color": "#70c983",
            "size": Object {
              "large": "40px",
            },
          },
        }
      }
      version="1.1"
      viewBox="0 0 24 24"
      width="24px"
    >
      <polygon
        fill="none"
        points="5 21 8 14 3 9 9 9 12 3 15 9 21 9 16 14 19 21 12 17"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </label>
  <label
    className="jsx-1428835773 star"
    htmlFor="2-star2"
  >
    <input
      checked={false}
      className="jsx-1428835773"
      id="2-star2"
      name={2}
      onChange={[Function]}
      onClick={[Function]}
      type="radio"
      value={2}
    />
    <svg
      aria-label="star"
      className="grommetux-control-icon grommetux-control-icon-star grommetux-control-icon--large grommetux-control-icon--responsive"
      height="24px"
      role="img"
      theme={
        Object {
          "icon": Object {
            "color": "#70c983",
            "size": Object {
              "large": "40px",
            },
          },
        }
      }
      version="1.1"
      viewBox="0 0 24 24"
      width="24px"
    >
      <polygon
        fill="none"
        points="5 21 8 14 3 9 9 9 12 3 15 9 21 9 16 14 19 21 12 17"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </label>
  <label
    className="jsx-1428835773 star"
    htmlFor="3-star3"
  >
    <input
      checked={true}
      className="jsx-1428835773"
      id="3-star3"
      name={3}
      onChange={[Function]}
      onClick={[Function]}
      type="radio"
      value={3}
    />
    <svg
      aria-label="star"
      className="grommetux-control-icon grommetux-control-icon-star grommetux-control-icon--large grommetux-control-icon--responsive"
      height="24px"
      role="img"
      theme={
        Object {
          "icon": Object {
            "color": "#70c983",
            "size": Object {
              "large": "40px",
            },
          },
        }
      }
      version="1.1"
      viewBox="0 0 24 24"
      width="24px"
    >
      <polygon
        fill="none"
        points="5 21 8 14 3 9 9 9 12 3 15 9 21 9 16 14 19 21 12 17"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </label>
  <label
    className="jsx-1428835773 star"
    htmlFor="4-star4"
  >
    <input
      checked={false}
      className="jsx-1428835773"
      id="4-star4"
      name={4}
      onChange={[Function]}
      onClick={[Function]}
      type="radio"
      value={4}
    />
    <svg
      aria-label="star"
      className="grommetux-control-icon grommetux-control-icon-star grommetux-control-icon--large grommetux-control-icon--responsive"
      height="24px"
      role="img"
      theme={
        Object {
          "icon": Object {
            "color": "#bcbecf",
            "size": Object {
              "large": "40px",
            },
          },
        }
      }
      version="1.1"
      viewBox="0 0 24 24"
      width="24px"
    >
      <polygon
        fill="none"
        points="5 21 8 14 3 9 9 9 12 3 15 9 21 9 16 14 19 21 12 17"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </label>
  <label
    className="jsx-1428835773 star"
    htmlFor="5-star5"
  >
    <input
      checked={false}
      className="jsx-1428835773"
      id="5-star5"
      name={5}
      onChange={[Function]}
      onClick={[Function]}
      type="radio"
      value={5}
    />
    <svg
      aria-label="star"
      className="grommetux-control-icon grommetux-control-icon-star grommetux-control-icon--large grommetux-control-icon--responsive"
      height="24px"
      role="img"
      theme={
        Object {
          "icon": Object {
            "color": "#bcbecf",
            "size": Object {
              "large": "40px",
            },
          },
        }
      }
      version="1.1"
      viewBox="0 0 24 24"
      width="24px"
    >
      <polygon
        fill="none"
        points="5 21 8 14 3 9 9 9 12 3 15 9 21 9 16 14 19 21 12 17"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </label>
  <label
    className="jsx-1428835773 star"
    htmlFor="6-star6"
  >
    <input
      checked={false}
      className="jsx-1428835773"
      id="6-star6"
      name={6}
      onChange={[Function]}
      onClick={[Function]}
      type="radio"
      value={6}
    />
    <svg
      aria-label="star"
      className="grommetux-control-icon grommetux-control-icon-star grommetux-control-icon--large grommetux-control-icon--responsive"
      height="24px"
      role="img"
      theme={
        Object {
          "icon": Object {
            "color": "#bcbecf",
            "size": Object {
              "large": "40px",
            },
          },
        }
      }
      version="1.1"
      viewBox="0 0 24 24"
      width="24px"
    >
      <polygon
        fill="none"
        points="5 21 8 14 3 9 9 9 12 3 15 9 21 9 16 14 19 21 12 17"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </label>
</div>
`;

exports[`Storyshots Stepper Stepper 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className={undefined}
  >
    <ul
      className="jsx-291528123 stepper-header"
    >
      <li
        className="jsx-1340858167 step-icon step-icon--current"
      >
        <span
          className="jsx-1340858167"
        />
      </li>
      <li
        className="jsx-1340858167 step-icon step-icon--next"
      >
        <span
          className="jsx-1340858167"
        />
      </li>
      <li
        className="jsx-1340858167 step-icon step-icon--next"
      >
        <span
          className="jsx-1340858167"
        />
      </li>
      <li
        className="jsx-1340858167 step-icon step-icon--next"
      >
        <span
          className="jsx-1340858167"
        />
      </li>
      <li
        className="jsx-1340858167 step-icon step-icon--next"
      >
        <span
          className="jsx-1340858167"
        />
      </li>
      <li
        className="jsx-1340858167 step-icon step-icon--last step-icon--next"
      >
        <span
          className="jsx-1340858167"
        />
      </li>
    </ul>
    <div
      className="jsx-4224162652 step"
      style={
        Object {
          "opacity": 1,
          "transform": "translateX(0)",
        }
      }
    >
      <button
        className="jsx-1748154264 button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="button__content"
        >
          Next
        </span>
      </button>
      <br />
      current step NaN
    </div>
  </div>
</div>
`;

exports[`Storyshots TimePicker TimePicker 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <section
    className="jsx-3947417489 b-time-picker"
  >
    <div
      className="jsx-3947417489 b-time-picker__wrapper"
    >
      <div
        className="jsx-3947417489 b-time-picker__title"
      >
        Appointment time
      </div>
      <div
        className="jsx-3947417489 b-time-picker__input"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="jsx-3947417489 b-time-picker__logo"
        >
          <svg
            aria-label="clock"
            className="grommetux-control-icon grommetux-control-icon-clock grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M12,5 L12,12 L17,12"
              fill="none"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </div>
        <input
          className="jsx-3947417489 b-input"
          onChange={[Function]}
          type="text"
          value="Pick time"
        />
      </div>
      
    </div>
  </section>
</div>
`;

exports[`Storyshots Toast default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className="jsx-1748154264 button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="button__content"
    >
      Create toast
    </span>
  </button>
  <div
    className="toast-container toast-container-empty"
  >
    <style>
      .toast-box{max-height:100%;box-sizing:border-box;margin-bottom:10px;color:#2A2A30;-webkit-transition:-webkit-transform 200ms ease-out,opacity 200ms ease-out,max-height 100ms ease 200ms,padding 100ms ease 300ms,margin 100ms ease 400ms;-webkit-transition:transform 200ms ease-out,opacity 200ms ease-out,max-height 100ms ease 200ms,padding 100ms ease 300ms,margin 100ms ease 400ms;transition:transform 200ms ease-out,opacity 200ms ease-out,max-height 100ms ease 200ms,padding 100ms ease 300ms,margin 100ms ease 400ms;}
      .toast-box.fade-enter{opacity:0;-webkit-transform:translate(40px);-ms-transform:translate(40px);transform:translate(40px);}
      .toast-box.fade-exit-active{opacity:0;-webkit-transform:translate(40px);-ms-transform:translate(40px);transform:translate(40px);max-height:0 !important;margin:0 !important;padding:0 !important;overflow:hidden;}
      .toast-box.rectangle-22{padding:21px 18px;width:413px;border-radius:4px;background-color:#FFFFFF;box-shadow:0 2px 40px 0 rgba(0,0,0,0.05);}
      .toast-box .circle{margin:5px 15px 0 0;float:left;display:block;height:7px;width:7px;background-color:#222328;border-radius:50%;}
      .toast-box.primary .circle{background-color:#0c97f9;}
      .toast-box .message{float:left;width:335px;color:#222328;font-weight:500;line-height:18px;}
      .toast-box .icons-close{padding-top:2px;width:14px;float:right;}
      .toast-box .clear{clear:both;}
      .toast-box .icon{padding:0;margin:0;height:14px;width:14px;-webkit-transition:all 0.3s;transition:all 0.3s;border:none;outline:none;opacity:0.6;cursor:pointer;background-repeat:no-repeat;background-color:transparent;}
      .toast-box .icon:hover{opacity:1;}
      .toast-box .icon .grommetux-control-icon-close{height:14px;width:14px;display:inline-block;}
      .toast-box .icon .grommetux-control-icon-close path{stroke-width:4;}
      .toast-container{position:fixed;top:10px;left:50%;margin-left:-196px;}
    </style>
  </div>
</div>
`;

exports[`Storyshots Video Player default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1622707451 video-player-container"
  >
    <div
      className="video-react-controls-enabled video-react-paused video-react-fluid video-react-user-active video-react-workinghover video-react video-player"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "paddingTop": "56.25%",
        }
      }
      tabIndex="-1"
    >
      <video
        autoPlay={undefined}
        className="video-react-video video-player"
        crossOrigin={undefined}
        id={undefined}
        loop={undefined}
        muted={false}
        onAbort={[Function]}
        onCanPlay={[Function]}
        onCanPlayThrough={[Function]}
        onDurationChange={[Function]}
        onEmptied={[Function]}
        onEnded={[Function]}
        onError={[Function]}
        onLoadStart={[Function]}
        onLoadedData={[Function]}
        onLoadedMetadata={[Function]}
        onPause={[Function]}
        onPlay={[Function]}
        onPlaying={[Function]}
        onProgress={[Function]}
        onRateChange={[Function]}
        onSeeked={[Function]}
        onSeeking={[Function]}
        onStalled={[Function]}
        onSuspend={[Function]}
        onTimeUpdate={[Function]}
        onVolumeChange={[Function]}
        onWaiting={[Function]}
        playsInline={true}
        poster={undefined}
        preload="auto"
        src={undefined}
      />
      <button
        aria-live="polite"
        className="video-react-big-play-button video-react-big-play-button-center video-player__big-play-button big-play-button-hide"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="video-react-control-text"
        >
          Play Video
        </span>
      </button>
      <div
        className="video-react-loading-spinner video-player"
      />
      <div
        className="video-react-control-bar video-react-control-bar-auto-hide video-player__control-bar"
      >
        <div
          className="video-react-progress-control video-react-control video-player__progress"
          onMouseMove={[Function]}
        >
          <div
            aria-label="video progress bar"
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow="NaN"
            aria-valuetext="0:00"
            className="video-react-progress-holder video-player__progress video-react-slider-horizontal video-react-slider"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
          >
            <div
              className="video-react-play-progress video-react-slider-bar"
              data-current-time="0:00"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            >
              <span
                className="video-react-control-text"
              >
                <span>
                  Progress
                </span>
                : 
                NaN%
              </span>
            </div>
          </div>
        </div>
        <button
          className="video-player__fullscreen-button video-react-icon-fullscreen video-react-fullscreen-control video-react-control video-react-button video-react-icon"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="video-react-control-text"
          >
            Non-Fullscreen
          </span>
        </button>
      </div>
    </div>
    <style>
      .video-player:hover .video-player__big-play-button.video-react-big-play-button{background-color:rgba(255,255,255,0.4);}
      .video-player__big-play-button.video-react-big-play-button{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;width:76px;height:76px;padding:0;margin-top:-38px;margin-left:-38px;border-width:0;border-radius:50%;background-color:rgba(255,255,255,0.4);cursor:pointer;}
      .video-player__big-play-button.video-react-big-play-button:focus{outline:none;}
      .video-player__big-play-button.video-react-big-play-button:before{font-size:3rem;color:#ffffff;position:static;}
      .video-player__control-bar.video-react-control-bar{position:static;height:0;}
      .video-player__progress.video-react-progress-control{position:absolute;bottom:30px;left:50%;height:30px;width:300px;margin-left:-150px;}
      .video-player__progress.video-react-progress-control .video-react-load-progress,.video-player__progress.video-react-progress-control .video-react-progress-holder{height:3px;border-radius:3px;}
      .video-player__progress.video-react-progress-control .video-react-progress-holder .video-react-play-progress{border-radius:3px;}
      .video-player__fullscreen-button.video-react-fullscreen-control{position:absolute;top:24px;right:24px;height:30px;padding:6px 12px;background-color:rgba(42,42,48,0.5);border-radius:6px;}
    </style>
  </div>
</div>
`;

exports[`Storyshots Video Recorder default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1676162044 jsx-4132344403 video-recorder"
  >
    <video
      autoPlay={true}
      className="jsx-436993235"
      muted={true}
    >
      Your browser does not support the video tag.
    </video>
    <div
      className="jsx-436993235 video-recorder-controls"
    >
      <p
        className="jsx-436993235"
      >
        Start recording
      </p>
      <button
        className="jsx-2729577650 record-button record-button--start"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
